atualizaçao do tamanho

--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
             <div id="titulo">
                 <h1>Sweet <span>Delights</span></h1>
                 <h2>Sua loja de doces</h2>
-                <p>Bem-vindo à nossa loja de doces! Descubra uma explosão de sabores com nossas guloseimas artesanais de alta qualidade. Chocolates finos, balas coloridas e caramelos irresistíveis esperam por você. Venha nos visitar e transforme seu dia em um momento doce e inesquecível!</p>
+                <p>Bem-vindo à nossa loja de doces! Descubra uma explosão de sabores com nossas guloseimas artesanais de alta qualidade.
+                    
+                </p>
                 <img class="redes-sociais" src="imagens/logo-instagram.jpg" alt="logo do instagram">
                 <img class="redes-sociais" src="imagens/logo-facebook.jpg" alt="">
             </div>
