atualizaçao media para cel

--- a/index.html
+++ b/index.html
@@ -53,9 +53,25 @@
             </div>
             
             <div id="container">
-                <div class="item"><img src="" alt=""><p>produto 1</p></div>
-                <div class="item"><img src="" alt=""><p>produto 1</p></div>
-                <div class="item"><img src="" alt=""><p>produto 1</p></div>
+                
+                <div class="item">
+                    <div class="img-prod">
+                        <img src="" alt=""><p>produto 1</p>
+                    </div>
+                </div>
+
+                <div class="item">
+                    <div class="img-prod">
+                        <img src="" alt=""><p>produto 1</p>
+                    </div>
+                </div>
+
+                <div class="item">
+                    <div class="img-prod">
+                        <img src="" alt=""><p>produto 1</p>
+                    </div>
+                </div>
+
                 <div class="item"><img src="" alt=""><p>produto 1</p></div>
                 <div class="item"><img src="" alt=""><p>produto 1</p></div>
                 <div class="item"><img src="" alt=""><p>produto 1</p></div>
