--- a/index.html
+++ b/index.html
@@ -6,14 +6,21 @@
     <title>Sweet delling
     </title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="estilo/style.css">
+    <link rel="stylesheet" href="estilos/style.css">
+    <link rel="stylesheet" href="estilos/Media-Query.css">
+    <link rel="stylesheet" href="JavaScript/index.js">
 </head>
-<body>
+<body onresize="mudouTamanho()">
     <section id="header">
         <header class="header-content">
-            <img id="menu" src="imagens/menu.png" alt="menu">
+            <div class="menu-container">
+
+                <img id="menu" src="imagens/menu.png" alt="menu" onclick="clikmenu()">
+
+            </div>
+
             <h1>Sweet Delights</h1 >
-            <nav>
+            <nav id="nav-menu">
                 <a id="cabeçalho-home" href="index.html">Home</a>
                 <a id="cabeçalho-prod" href="produtos.html">Produtos</a>
                 <a id="cabeçalho-fale-c" href="#" >Fale conosco</a>
