media sendo criadas

--- a/index.html
+++ b/index.html
@@ -7,15 +7,14 @@
     </title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="estilos/style.css">
-    <link rel="stylesheet" href="estilos/Media-Query.css">
-    <link rel="stylesheet" href="JavaScript/index.js">
+    <link rel="stylesheet" href="estilos/Media-Query.css" media="screen">
 </head>
 <body onresize="mudouTamanho()">
     
         <header class="header-content">
             <div>
 
-                <img id="menu" src="imagens/menu.png" alt="menu" onclick="clikmenu()">
+                <img id="menu" onclick="clickMenu()" src="imagens/menu.png" alt="menu" >
 
             </div>
 
